--- a/pspipe_doc/pol_angle.tex
+++ b/pspipe_doc/pol_angle.tex
@@ -80,6 +80,27 @@ C^{T_{\alpha} B_{\beta}}_{\ell} \sim 2\phi_{\beta}C^{TE}_{\ell}      \\
 C^{B_{\alpha} T_{\beta}}_{\ell}  \sim 2\phi_{\alpha}C^{TE}_{\ell}      
 \ea
 
+For completness the effect of TE, EE and BB is given by:
+\ba
+C^{T_{\alpha} E_{\beta}}_{\ell} &=& C^{TE}_{\ell}  \cos 2\phi_{\beta} - C^{TB}_{\ell}   \sin 2\phi_{\beta} \\
+C^{E_{\alpha} T_{\beta}}_{\ell} &=& C^{TE}_{\ell}  \cos 2\phi_{\alpha} - C^{TB}_{\ell}   \sin 2\phi_{\alpha}
+\ea
+
+%\ba
+%( a^{E}_{\ell m} \sin 2\phi_{\alpha} +  a^{B}_{\ell m} \cos 2\phi_{\alpha}) (  a^{E}_{\ell m} \sin 2\phi_{\beta} +  a^{B}_{\ell m} \cos 2\phi_{\beta})
+%\ea
+
+\ba
+C^{E_{\alpha} E_{\beta}}_{\ell} &=&  C^{EE}_{\ell} \cos 2\phi_{\alpha} \cos 2\phi_{\beta} + C^{BB}_{\ell} \sin 2\phi_{\alpha} \sin 2\phi_{\beta} - C^{EB}_{\ell} ( \sin 2\phi_{\beta}  \cos 2\phi_{\alpha} +\cos 2\phi_{\beta} \sin 2\phi_{\alpha} ) \nonumber \\
+&=& C^{EE}_{\ell} \cos 2\phi_{\alpha} \cos 2\phi_{\beta} + C^{BB}_{\ell} \sin 2\phi_{\alpha} \sin 2\phi_{\beta} - C^{EB}_{\ell}  \sin 2(\phi_{\beta} + \phi_{\alpha} ) 
+\ea
+
+
+\ba
+C^{B_{\alpha} B_{\beta}}_{\ell} &=&  C^{EE}_{\ell} \sin 2\phi_{\alpha} \sin 2\phi_{\beta} + C^{BB}_{\ell} \cos 2\phi_{\alpha} \cos 2\phi_{\beta} + C^{EB}_{\ell}(\sin 2\phi_{\alpha} \cos 2\phi_{\beta} + \cos 2\phi_{\alpha} \sin 2\phi_{\beta} ) \nonumber \\
+&=&  C^{EE}_{\ell} \sin 2\phi_{\alpha} \sin 2\phi_{\beta} + C^{BB}_{\ell} \cos 2\phi_{\alpha} \cos 2\phi_{\beta} + C^{EB}_{\ell}  \sin 2(\phi_{\beta} + \phi_{\alpha} ) 
+\ea
+
 
 \end{document}
 
