--- a/pspipe_doc/pol_angle.tex
+++ b/pspipe_doc/pol_angle.tex
@@ -101,6 +101,13 @@ C^{B_{\alpha} B_{\beta}}_{\ell} &=&  C^{EE}_{\ell} \sin 2\phi_{\alpha} \sin 2\ph
 &=&  C^{EE}_{\ell} \sin 2\phi_{\alpha} \sin 2\phi_{\beta} + C^{BB}_{\ell} \cos 2\phi_{\alpha} \cos 2\phi_{\beta} + C^{EB}_{\ell}  \sin 2(\phi_{\beta} + \phi_{\alpha} ) 
 \ea
 
+\section{Likelihood} 
+
+\ba
+C_{b}^{\alpha, EB} = \tilde{C}_{b}^{\alpha, EB} \\
+\ln {\cal L} ( C_{b}^{\alpha, EB} |  \phi_\alpha) &\propto&  \left(  C_{b}^{\alpha, EB} -  C_{b}^{\rm th , EB}(\phi_\alpha) \right) \Sigma^{-1}_{bb'} \left(  C_{b'}^{\alpha, EB} -  C_{b'}^{\rm th , EB}(\phi_\alpha) \right) \\
+\Sigma_{bb'} &=&  [\Sigma_{\rm analytic}]^{\rm MC }_{bb'} + \Sigma^{\rm beam}_{bb'}  + \Sigma^{\rm leakage \ beam}_{bb'}
+\ea
 
 \end{document}
 
